--- a/setup.cfg
+++ b/setup.cfg
@@ -8,21 +8,9 @@ platform = any
 
 [options]
 python_requires = >= 3.9
-include_package_data = True
 packages = find:
 install_requires =
-    aioredis
-    dateparser
-    fastapi
-    pandas
-    pydantic
-    rich
-    toolz
-    uvicorn
-    yahoo-fin
-
-[options.packages.find]
-exclude =
-    stock_market_engine.api
-    tests
-    tests.*
+	aioredis
+	fastapi
+	stock-market-lib @ git+https://bitbucket.org/MattiasDC/stock-market-lib.git@master
+	uvicorn
