--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ python_requires = >= 3.9
 packages = find:
 install_requires =
 	aioredis
+	fakeredis
 	fastapi
 	stock-market-lib @ git+https://bitbucket.org/MattiasDC/stock-market-lib.git@master
 	uvicorn
