add black and flake8 configuration and fix all issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,12 @@ python_requires = >= 3.9
 packages = find:
 install_requires =
 	aioredis
+	black
 	fakeredis
+	flake8
 	fastapi
 	stock-market-lib @ git+https://bitbucket.org/MattiasDC/stock-market-lib.git@master
 	uvicorn
+
+[flake8]
+max-line-length = 88
