--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ install_requires =
 	fakeredis
 	flake8
 	fastapi
+	pre-commit
 	stock-market-lib @ git+https://bitbucket.org/MattiasDC/stock-market-lib.git@master
 	uvicorn
 
