Add nox, yamllint and isort

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,13 +11,35 @@ python_requires = >= 3.9
 packages = find:
 install_requires =
 	aioredis
-	black
 	fakeredis
-	flake8
 	fastapi
-	pre-commit
 	stock-market-lib @ git+https://bitbucket.org/MattiasDC/stock-market-lib.git@master
 	uvicorn
 
+[options.packages.find]
+exclude =
+    tests
+    tests.*
+
+[options.extras_require]
+dev =
+    black
+    flake8
+    isort
+    nox
+    pre-commit
+    yamllint
+
 [flake8]
 max-line-length = 88
+exclude =
+    .env
+    .nox
+    *.egg-info
+
+[isort]
+profile = black
+skip =
+    .env
+    .nox
+    *.egg-info
