--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,3 +1,4 @@
+---
 image: atlassian/default-image:2
 
 pipelines:
@@ -7,8 +8,17 @@ pipelines:
           name: 'Docker push'
           script:
             - echo $BITBUCKET_REPO_SLUG
-            - docker login -u $TREESCALE_USERNAME -p $TREESCALE_PASSWORD repo.treescale.com
-            - docker build -t repo.treescale.com/$TREESCALE_USERNAME/$BITBUCKET_REPO_SLUG:$BITBUCKET_TAG .
-            - docker push repo.treescale.com/$TREESCALE_USERNAME/$BITBUCKET_REPO_SLUG:$BITBUCKET_TAG
+            - >
+              docker login
+                -u $TREESCALE_USERNAME
+                -p $TREESCALE_PASSWORD repo.treescale.com
+            - >
+              docker build
+                -t repo.treescale.com/$TREESCALE_USERNAME/
+                $BITBUCKET_REPO_SLUG:$BITBUCKET_TAG .
+            - >
+              docker push
+                repo.treescale.com/$TREESCALE_USERNAME/
+                $BITBUCKET_REPO_SLUG:$BITBUCKET_TAG
 options:
   docker: true
