bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,6 +8,7 @@ pipelines:
           name: 'Docker push'
           script:
             - echo $BITBUCKET_REPO_SLUG
+            - echo $DOCKER_HUB_USERNAME
             - >
               docker login
                 -u $DOCKER_HUB_USERNAME
