bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,15 +9,15 @@ pipelines:
           deployment: production
           script:
             - echo $BITBUCKET_REPO_SLUG
-            - echo $DOCKER_HUB_USERNAME
+            - echo ${DOCKER_HUB_USERNAME}
             - >
               docker login
-                -u $DOCKER_HUB_USERNAME
-                -p $DOCKER_HUB_PASSWORD
+                -u ${DOCKER_HUB_USERNAME}
+                -p ${DOCKER_HUB_PASSWORD}
                 docker.io
             - >
-              docker build -t $DOCKER_HUB_USERNAME/$BITBUCKET_REPO_SLUG:$BITBUCKET_TAG .
+              docker build -t ${DOCKER_HUB_USERNAME}/$BITBUCKET_REPO_SLUG:$BITBUCKET_TAG .
             - >
-              docker push $DOCKER_HUB_USERNAME/$BITBUCKET_REPO_SLUG:$BITBUCKET_TAG
+              docker push ${DOCKER_HUB_USERNAME}/$BITBUCKET_REPO_SLUG:$BITBUCKET_TAG
 options:
   docker: true
