--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,7 +10,7 @@ pipelines:
           script:
             - echo $BITBUCKET_REPO_SLUG
             - echo ${DOCKER_HUB_USERNAME}
-            - echo ${DOCKERHUB_PASSWORD} | docker login -u "$DOCKERHUB_USERNAME" --password-stdin docker.io
+            - echo ${DOCKERHUB_PASSWORD} | docker login --username "$DOCKERHUB_USERNAME" --password-stdin docker.io
             - docker build -t ${DOCKERHUB_USERNAME}/$BITBUCKET_REPO_SLUG:$BITBUCKET_TAG .
             - docker push ${DOCKERHUB_USERNAME}/$BITBUCKET_REPO_SLUG:$BITBUCKET_TAG
 options:
