--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,7 +9,8 @@ pipelines:
           deployment: production
           script:
             - echo $BITBUCKET_REPO_SLUG
-            - echo ${DOCKERHUB_PASSWORD} | docker login --password-stdin --username "$DOCKERHUB_USERNAME" docker.io
+            - echo "${DOCKERHUB_USERNAME}"
+            - echo ${DOCKERHUB_PASSWORD} | docker login --password-stdin --username "${DOCKERHUB_USERNAME}" docker.io
             - docker build -t ${DOCKERHUB_USERNAME}/$BITBUCKET_REPO_SLUG:$BITBUCKET_TAG .
             - docker push ${DOCKERHUB_USERNAME}/$BITBUCKET_REPO_SLUG:$BITBUCKET_TAG
 options:
