bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,8 +9,7 @@ pipelines:
           deployment: production
           script:
             - echo $BITBUCKET_REPO_SLUG
-            - echo "$DOCKERHUB_USERNAME"
-            - echo ${DOCKERHUB_PASSWORD} | docker login --password-stdin --username xelicon docker.io
+            - echo ${DOCKERHUB_PASSWORD} | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
             - docker build -t ${DOCKERHUB_USERNAME}/$BITBUCKET_REPO_SLUG:$BITBUCKET_TAG .
             - docker push ${DOCKERHUB_USERNAME}/$BITBUCKET_REPO_SLUG:$BITBUCKET_TAG
 options:
