--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,11 +7,13 @@ pipelines:
       - step:
           name: 'Docker push'
           deployment: production
-          script:
-            - echo $BITBUCKET_REPO_SLUG
-            - echo $DOCKERHUB_PASSWORD | docker login --username "$DOCKERHUB_USERNAME" --password-stdin
-            - docker build -t $DOCKERHUB_USERNAME/$BITBUCKET_REPO_SLUG:$BITBUCKET_TAG .
-            - docker push $DOCKERHUB_USERNAME/$BITBUCKET_REPO_SLUG:$BITBUCKET_TAG
-            
+          script: >
+            echo $BITBUCKET_REPO_SLUG
+            echo $DOCKERHUB_PASSWORD |
+              docker login --username "$DOCKERHUB_USERNAME" --password-stdin
+            docker build -t
+              $DOCKERHUB_USERNAME/$BITBUCKET_REPO_SLUG:$BITBUCKET_TAG .
+            docker push $DOCKERHUB_USERNAME/$BITBUCKET_REPO_SLUG:$BITBUCKET_TAG
+
 options:
   docker: true
