Use pytest async tests i.s.o. unittest and change engine to be async

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,9 @@ dev =
     nox
     pre-commit
     pytest
+    pytest-asyncio
     yamllint
+
 
 [flake8]
 max-line-length = 88
@@ -44,3 +46,8 @@ skip =
     .env
     .nox
     *.egg-info
+
+[tool:pytest]
+asyncio_mode = auto
+filterwarnings = 
+    ignore:The localize method is no longer necessary, as this time zone supports the fold attribute
