--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -22,7 +22,7 @@ services:
       - .:/app
 
   redis:
-    container_name: redis
+    container_name: redis-stock-market-engine
     image: redis:alpine
     restart: always
     ports:
