--- a/setup.cfg
+++ b/setup.cfg
@@ -7,12 +7,12 @@ url = https://bitbucket.org/MattiasDC/{name}
 platform = any
 
 [options]
-python_requires = >= 3.10
+python_requires = >= 3.9
 packages = find:
 install_requires =
 	aioredis
-	fakeredis
 	fastapi
+    py-utils @ git+https://bitbucket.org/MattiasDC/py-utils.git@master
 	stock-market-lib @ git+https://bitbucket.org/MattiasDC/stock-market-lib.git@master
 	uvicorn
 
@@ -24,6 +24,7 @@ exclude =
 [options.extras_require]
 dev =
     black
+    fakeredis
     flake8
     isort
     nox
