--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,9 @@ name = stock-market-engine
 version = v0.1
 author = Mattias De Charleroy
 author_email = mattias.decharleroy@gmail.com
-url = https://bitbucket.org/MattiasDC/{name}
+url = https://github.com/MattiasDC/{name}
 platform = any
+long_description = stock-market-engine is a Python microservice application that serves a REST API to create/query/update a virtual stock market in time. It's build on top of the [stock-market-lib](https://bitbucket.org/MattiasDC/stock-market-lib.git) library.
 
 [options]
 python_requires = >= 3.9
@@ -12,8 +13,8 @@ packages = find:
 install_requires =
 	aioredis
 	fastapi
-    py-utils @ git+https://bitbucket.org/MattiasDC/py-utils.git@master
-	stock-market-lib @ git+https://bitbucket.org/MattiasDC/stock-market-lib.git@master
+    simputils==0.1.0
+	stock-market-lib==0.1.4
 	uvicorn
 
 [options.packages.find]
