Get version from attribute

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = stock-market-engine
-version = v0.1
+version = attr: stock_market_engine.__version__
 author = Mattias De Charleroy
 author_email = mattias.decharleroy@gmail.com
 url = https://github.com/MattiasDC/{name}
